fixed alignment and truncate on p.name

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -18,27 +18,27 @@
 
 .project-card {
   // display: flex;
-  // align-items: center;
-  margin-bottom: 8px  !important;
-  background: white !important;
-  padding: 8px 16px !important;
-  border: 1px solid rgb(235,235,235) !important;
+  align-items: center;
+  margin-bottom: 8px ;
+  background: white;
+  padding: 8px 16px;
+  border: 1px solid rgb(235,235,235);
 }
 
-// .project-card .pcard-content {
-//   flex-grow: 1;
-//   padding: 0 24px;
-// }
+.project-card .pcard-content {
+  // flex-grow: 1;
+  padding: 0 24px;
+}
 
 .project-card p {
   margin-bottom: 0;
   line-height: 3;
 }
 
-.project-card small {
-  color: #999999;
-  font-weight: bold;
-}
+// .project-card small {
+//   color: #999999;
+//   font-weight: bold;
+// }
 .project-card .project-actions {
   justify-content: end;
   align-items: center;
